--- a/website/src/pages/v3/features/incremental-delivery.mdx
+++ b/website/src/pages/v3/features/incremental-delivery.mdx
@@ -87,7 +87,7 @@ query SlowAndFastFieldWithDefer {
 
 Then press the Play (Execute Query) button.
 
-Alternatively, you can also send the subscription operation via curl.
+Alternatively, you can also send the defer operation via curl.
 
 ```sh
 curl -g -X POST -H "accept:text/event-stream" -H "content-type: application/json" -d '{"query":"query SlowAndFastFieldWithDefer { ... on Query @defer { slowField } fastField }"}' http://localhost:4000/graphql
@@ -105,7 +105,7 @@ query StreamAlphabet {
 
 Then press the Play (Execute Query) button.
 
-Alternatively, you can also send the subscription operation via curl.
+Alternatively, you can also send the stream operation via curl.
 
 ```sh
 curl -g -X POST -H "accept:text/event-stream" -H "content-type: application/json" -d '{"query":"query StreamAlphabet { alphabet @stream }"}' http://localhost:4000/graphql
