--- a/website/src/pages/v3/migration/migration-from-yoga-v2.mdx
+++ b/website/src/pages/v3/migration/migration-from-yoga-v2.mdx
@@ -187,3 +187,33 @@ const yoga = createYoga({
 ```
 
 Checkout [envelop docs](https://www.the-guild.dev/graphql/envelop/v3/guides/migrating-from-v2-to-v3#8-update-options-for-usemaskederrors-plugin) for more details.
+
+## Removed `.inject` method
+
+Previously we provided `.inject` method to mock HTTP requests for testing purposes. Now you can use the fetch method on your yoga instance for calling the yoga instance as if you were doing an HTTP request.
+
+```diff
+import { createYoga } from 'graphql-yoga'
+import { schema } from './schema'
+
+const yoga = createYoga({ schema })
+
+
+- const { response, executionResult } = await yoga.inject({
+-   document: "query { ping }",
+- })
+
++ const response = await yoga.fetch('http://localhost:4000/graphql', {
++   method: 'POST',
++   headers: {
++     'Content-Type': 'application/json',
++   },
++   body: JSON.stringify({
++     query: 'query { ping }',
++   }),
++ })
++ const executionResult = await response.json()
+
+console.assert(response.status === 200, 'Response status should be 200')
+console.assert(executionResult.data.ping === 'pong',`Expected 'pong'`)
+```
