--- a/website/src/pages/v3/features/context.mdx
+++ b/website/src/pages/v3/features/context.mdx
@@ -1,21 +1,19 @@
 # GraphQL Context
 
-A context is usually created for each execution of a GraphQL Operation, and it is passed to the resolver functions as a third argument.
-You can learn more about [`Context` in GraphQL Tools docs](https://graphql-tools.com/docs/connectors).
+A context is usually created for each execution of a GraphQL Operation, and it is injected into the GraphQL field resolver functions.
+It is commonly used for doing dependency injection, e.g. if you want to access the current user or other information.
 
-It is commonly used for doing dependency injection.
-
-Within GraphQL Yoga, the context object is generated per HTTP request.
+Within GraphQL Yoga, the context object is constructed for each incoming HTTP request.
 
 ## Default Context
 
 By default, GraphQL Yoga provides the following values in the context object independently of your environment and setup:
 
-- `request` - [Fetch API `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform-independent way. It can be useful for accessing headers to authenticate a user
-- `query` - the `DocumentNode` that was parsed from the GraphQL query string
-- `operationName` - the operation name selected from the incoming query
-- `variables` - the variables that were defined in the query
-- `extensions` - the extensions that were received from the client
+- `request` - [Fetch API `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform-independent way. It can be useful for accessing headers for authenticatating a client
+- `query` - the `DocumentNode` that was parsed from the GraphQL query string sent by a client
+- `operationName` - the operation name selected from the incoming query sent by a client
+- `variables` - the variables that were defined in the query sent by a client
+- `extensions` - the extensions that were received from the client sent by a client
 
 ### Context Usage Example: Log Headers
 
@@ -55,7 +53,7 @@ curl -X POST http://localhost:4000/graphql \
 
 ## Extending the Initial Context
 
-You can extend the existing context by using the `context` property.
+You can extend the existing context by providing a `context` property to the `createYoga` call.
 
 ### Example: Object
 
@@ -82,12 +80,13 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
+
 server.listen(4000, () => {
   console.info('Server is running on http://localhost:4000/graphql')
 })
 ```
 
-You can also pass a function as the `context` property. The function will be invoked for each incoming GraphQL request with the initial context as an argument and after the invocation it will be merged with the initial context.
+Instead, you can also pass a function as the `context` property. The function will be invoked for each incoming GraphQL request with the initial context as an argument. The context returned from that function will be merged with the initial context.
 
 ### Example: Function Returning an Object
 
@@ -105,7 +104,7 @@ const yoga = createYoga({
     resolvers: {
       Query: {
         someNumber(_, _args, context) {
-          context.someNumber
+          return context.someNumber
         },
       },
     }),
@@ -146,9 +145,7 @@ const yoga = createYoga({
     return { someNumber: 13 }
   }
 })
-server.listen(4000, () => {
-  console.info('Server is running on http://localhost:4000/graphql')
-})
+
 const server = createServer(yoga)
 server.listen(4000, () => {
   console.info('Server is running on http://localhost:4000/graphql')
@@ -158,15 +155,15 @@ server.listen(4000, () => {
 ## Advanced Context Life-Cycle
 
 For most users, the previous sections are already sufficient.
-If you, however, need to integrate Yoga with a custom framework and/or want to attach runtime/framework-specific Request/Response objects to the context.
-Also, if you are just curious about how Yoga works in depth, this might also be interesting to you!
 
-There are 4 steps that GraphQL Yoga follows to generate the final context object:
+If you, however, need to integrate Yoga with a custom framework and/or want to attach runtime/framework-specific Request/Response objects to the context, or, if you are just curious about how Yoga works in depth, this might also be interesting information for you!
 
-- [Default Context](#default-context) - this context is constructed for each incoming request and the same on all platforms
-- [Server Context](#server-context) - the content of this context extension depends on the platform (Node.js/Deno/etc.) and the framework (raw Node.js/express/fastify)
-- [User Context](#user-context) - this context is created for each incoming request with access to the default and server context
-- [Envelop Plugin Context](#envelop-plugins) - the context from envelop plugins is processed last, the plugins have access to the default context, server context and user context
+There are in total four steps that GraphQL Yoga follows to generate the final context object.
+
+- [Default Context](#default-context) - created for each incoming request and the same on all platforms
+- [Server Context](#server-context) - depends on the platform (Node.js/Deno/etc.) and the framework (raw Node.js/express/fastify)
+- [User Context](#user-context) -  created for each incoming request with access to the default and server context
+- [Envelop Plugin Context](#envelop-plugins) - created last, the plugins have access to the default context, server context and user context
 
 ### Default Context
 
