--- a/website/src/pages/v3/features/file-uploads.mdx
+++ b/website/src/pages/v3/features/file-uploads.mdx
@@ -1,23 +1,19 @@
 # File Uploads
 
-GraphQL Yoga supports [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec) which basically allows you to upload files via HTTP and consume the binary data inside GraphQL Resolvers.
+GraphQL Yoga supports the [GraphQL Multipart Request Specification](https://github.com/jaydenseric/graphql-multipart-request-spec), allowing you to upload files and consume the binary data inside GraphQL Resolvers via HTTP.
 
-In GraphQL Yoga, you consume uploaded files or blobs as WHATWG standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API.
+In GraphQL Yoga, you consume uploaded files or blobs as WHATWG standard [`File`](https://developer.mozilla.org/en-US/docs/Web/API/File) or [`Blob`](https://developer.mozilla.org/en-US/docs/Web/API/Blob) objects you might be familiar from the browser's API. [Check out the MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File)
 
-[Check out MDN documentation to learn more about `File` objects](https://developer.mozilla.org/en-US/docs/Web/API/File)
+You can use any kind of client supports GraphQL Upload specification. [Check out GraphQL Client solutions](https://github.com/jaydenseric/graphql-multipart-request-spec#client)
 
-You can use any kind of client supports GraphQL Upload specification.
-[Check out here to find GraphQL Client solutions](https://github.com/jaydenseric/graphql-multipart-request-spec#client)
+## Quick start
 
-## Example
+This guide will show you how to process a file upload in GraphQL Yoga in no time.
+All you need to do is adding a `File` scalar to your schema.
 
-You only need to add a scalar type definition for file uploads in your schema. The name of the scalar doesn't matter.
-Let's use `File` in this example.
-
-`file-upload-example.ts`
-
-```ts
+```ts filename="file-upload-example.ts" {8, 15, 23-26}
 import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
 
 // Provide your schema
 const yoga = createYoga({
@@ -28,6 +24,7 @@ const yoga = createYoga({
       type Query {
         greetings: String!
       }
+
       type Mutation {
         readTextFile(file: File!): String!
       }
@@ -37,11 +34,6 @@ const yoga = createYoga({
         greetings: () => 'Hello World!'
       },
       Mutation: {
-        /**
-         * TypeScript type `File` is globally available.
-         * You don't need to install/import anything else
-         * for both `File` GraphQL Scalar and this type
-         */
         readTextFile: async (_, { file }: { file: File }) => {
           const textContent = await file.text()
           return textContent
@@ -50,6 +42,7 @@ const yoga = createYoga({
     }
   })
 })
+
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
 server.listen(4000, () => {
@@ -57,66 +50,13 @@ server.listen(4000, () => {
 })
 ```
 
-### Test your GraphQL Server with `cURL`
+After, starting the server, you can use [Curl](https://curl.se/) for testing your endpoint.
 
-```sh
+```bash filename="Terminal"
 curl localhost:4000/graphql \
   -F operations='{ "query": "mutation ($file: File!) { readTextFile(file: $file) }", "variables": { "file": null } }' \
   -F map='{ "0": ["variables.file"] }' \
   -F 0=@mytext.txt
-```
-
-### With [GraphQL Nexus](https://nexusjs.org/)
-
-You need to create a scalar type for file upload in your schema.
-
-`nexus-file-upload-example.ts`
-
-```ts
-import {
-  makeSchema,
-  scalarType,
-  mutationField,
-  queryField,
-  arg,
-  nonNull
-} from 'nexus'
-import { createYoga } from 'graphql-yoga'
-
-const FileScalar = scalarType({
-  name: 'File',
-  asNexusMethod: 'file',
-  description: 'The `File` scalar type represents a file upload.',
-  sourceType: 'File'
-})
-
-const greetings = queryField('greetings', {
-  type: 'String',
-  resolve: () => 'Hello World!'
-})
-
-const readTextFile = mutationField('readTextFile', {
-  type: 'String',
-  args: { file: nonNull(arg({ type: 'File' })) },
-  resolve: async (parent, { file }, ctx) => {
-    const textContent = await file.text()
-    return textContent
-  }
-})
-
-const schema = makeSchema({
-  types: [FileScalar, greetings, readTextFile]
-})
-
-const yoga = createYoga({
-  schema: schema
-})
-
-// Start the server and explore http://localhost:4000/graphql
-const server = createServer(yoga)
-server.listen(4000, () => {
-  console.info('Server is running on http://localhost:4000/graphql')
-})
 ```
 
 ## Disabling Multipart/File Upload Processing
@@ -153,5 +93,59 @@ createYoga({
       headerSize: 1000000
     }
   })
+})
+```
+
+## Third Party Integrations
+
+### Usage with GraphQL Nexus
+
+[GraphQL Nexus](https://nexusjs.org/) is a popular library for building GraphQL schemas with TypeScript. It provides a convenient API for defining GraphQL types and resolvers.
+
+```ts filename="nexus-file-upload-example.ts"
+import {
+  makeSchema,
+  scalarType,
+  mutationField,
+  queryField,
+  arg,
+  nonNull
+} from 'nexus'
+import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
+
+const FileScalar = scalarType({
+  name: 'File',
+  asNexusMethod: 'file',
+  description: 'The `File` scalar type represents a file upload.',
+  sourceType: 'File'
+})
+
+const greetings = queryField('greetings', {
+  type: 'String',
+  resolve: () => 'Hello World!'
+})
+
+const readTextFile = mutationField('readTextFile', {
+  type: 'String',
+  args: { file: nonNull(arg({ type: 'File' })) },
+  resolve: async (parent, { file }, ctx) => {
+    const textContent = await file.text()
+    return textContent
+  }
+})
+
+const schema = makeSchema({
+  types: [FileScalar, greetings, readTextFile]
+})
+
+const yoga = createYoga({
+  schema: schema
+})
+
+// Start the server and explore http://localhost:4000/graphql
+const server = createServer(yoga)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
 })
 ```
