--- a/website/src/pages/v3/features/error-masking.mdx
+++ b/website/src/pages/v3/features/error-masking.mdx
@@ -1,16 +1,18 @@
 # Error Masking
 
-Yoga uses [the Envelop `useMaskedErrors`](https://www.envelop.dev/plugins/use-masked-errors) for automatically masking unexpected errors and preventing sensitive information leaking to clients.
+Yoga automatically masks unexpected errors and prevents leaking sensitive information to clients.
 
-Such errors could be caused by failing to establish connection to remote services such as databases or HTTP APIs.
+Unexpected errors can be caused by failed connections to remote services such as databases or HTTP APIs.
 Nobody external needs to know that your database server is not reachable.
 Exposing such information to the outside world can make you vulnerable for targeted attacks.
+
+In order to build secure applications, it is crucial to understand this concept.
 
 ## Getting started
 
 Let's setup a simple schema that calls a remote service that is unavailable.
 
-```ts
+```ts filename="Error Masking Example"
 import { createYoga, createSchema } from 'graphql-yoga'
 import { fetch } from '@whatwg-node/fetch'
 
@@ -46,17 +48,13 @@ server.listen(4000, () => {
 
 Executing the following operation results in an execution result that does not include any detail from the error raised by the fetch call.
 
-**GraphQL Operation**
-
-```graphql
+```graphql filename="GraphQL Operation"
 query {
   greeting
 }
 ```
 
-**Execution Result with leaking error message**
-
-```json
+```json filename="Execution Result with leaking error message"
 {
   "errors": [
     {
@@ -79,59 +77,25 @@ As you can see Yoga comes with sensible defaults as error masking is enabled wit
 ## Receive original error in development
 
 When developing locally seeing the original error within your Chrome Dev Tools might be handy for debugging.
-You might be tempted to disable the masked errors via the `maskedErrors` config option, however, **we do not recommend that at all!**.
-Having development and production behavior as close as possible is very important for not having any surprises in production.
+You might be tempted to disable the masked errors via the `maskedErrors` config option, however, **we do not recommend that at all**.
 
-Instead we recommend enabling the Yoga development mode.
+Having development and production behavior as close as possible is very important for not having any surprises in production.
+Instead, we recommend enabling the Yoga development mode.
 
 To do this you need to start Yoga with the `NODE_ENV` environment variable set to `"development"`.
 
 On unix and windows systems the environment variable can be set when starting the server.
 
-```bash
-# Unix (Linux/MacOS)
+```bash filename="Linux/MacOS"
 NODE_ENV=development node server.js
-# Windows
+```
+
+```bash filename="Windows"
 set NODE_ENV=development
 node server.js
 ```
 
-```ts
-import { createYoga, createSchema } from 'graphql-yoga'
-import { fetch } from '@whatwg-node/fetch'
-
-// Provide your schema
-const yoga = createYoga({
-  schema: createSchema({
-    typeDefs: /* GraphQL */ `
-      type Query {
-        greeting: String!
-      }
-    `,
-    resolvers: {
-      Query: {
-        greeting: async () => {
-          // This service does not exist
-          const greeting = await fetch('http://localhost:9876/greeting').then(
-            (res) => res.text()
-          )
-
-          return greeting
-        }
-      }
-    }
-  })
-})
-
-const server = createServer(yoga)
-server.listen(4000, () => {
-  console.info('Server is running on http://localhost:4000/graphql')
-})
-```
-
-**GraphQL Operation**
-
-```graphql
+```graphql filename="GraphQL Operation"
 query {
   greeting
 }
@@ -139,9 +103,7 @@ query {
 
 This will add a more detailed error with a proper stacktrace to the errors extensions.
 
-**GraphQL Error Response with original error extensions**
-
-```json
+```json filename="GraphQL Error Response with original error extensions"
 {
   "errors": [
     {
@@ -172,7 +134,7 @@ This can be achieved by throwing a `GraphQLError` instead of a "normal" [`Error`
 
 E.g. you might want to throw an error if a resource cannot be found by an ID.
 
-```ts
+```ts filename="Error thrown for non extisting user" {26-28}
 import { createYoga, createSchema } from 'graphql-yoga'
 import { GraphQLError } from 'graphql'
 
@@ -216,9 +178,7 @@ server.listen(4000, () => {
 })
 ```
 
-**Query for non existing user**
-
-```graphql
+```graphql filename="Query for non existing user"
 query {
   user(byId: "6") {
     id
@@ -226,9 +186,7 @@ query {
 }
 ```
 
-**Execution result with error message**
-
-```json
+```json filename="Execution result with error message" {4}
 {
   "errors": [
     {
@@ -339,7 +297,7 @@ query {
 
 The extensions are not only limited to a `code` property. Any JSON serializable value can be passed as extensions.
 
-```ts
+```ts filename="GraphQLError with a variety of extensions" {5-13}
 throw new GraphQLError(
   `User with id '${args.byId}' not found.`,
   // error extensions
@@ -371,7 +329,7 @@ You can add additional HTTP headers by specifying the `extensions.http.status` f
 **Note:** Setting the status code and headers is only possible for the initial payload when sending a multipart operation (defer/stream) and only possible when when subscribing to the event source in a subscription operation (the HTTP status of an ongoing request that already sent a status code can not be changed).
 Please use the `extensions.http` with caution.
 
-```ts
+```ts filename="GraphQL Error with http extensions." {6-11}
 throw new GraphQLError(
   `User with id '${args.byId}' not found.`,
   // error extensions
@@ -394,23 +352,19 @@ throw new GraphQLError(
 We highly recommend using error masking.
 However, you can still disable it using the `maskedErrors` config option.
 
-```ts
+```ts filename="Disable Error Masking"
 createYoga({ maskedErrors: false })
 ```
 
 Executing the following operation will now result within a leaking error message that exposes information about internal API calls.
 
-**GraphQL Operation**
-
-```graphql
+```graphql filename="GraphQL Operation"
 query {
   greeting
 }
 ```
 
-**Execution Result with leaking error message**
-
-```json
+```json filename="Execution Result with leaking error message"
 {
   "errors": [
     {
